Fix spacing between save draft and submit button

--- a/app/components/community_activity_component/community_activity_component.scss
+++ b/app/components/community_activity_component/community_activity_component.scss
@@ -170,7 +170,7 @@
       .progress-component__submit{
         &-button-wrapper {
           display: grid;
-          grid-template-columns: 1.25fr 1fr;
+          grid-template-columns: 1fr 1fr;
           align-items: center;
           grid-gap: 0 10px;
 
